config; adding Junit and mockito dependencies for tests